# ML-project

./: 1782673117-steady-noble-wave.md  225th place, Bronze, score 1.958.txt  Implementation_roadmap.md  README.md  ensemble_simple.txt  feature_engineering.py  ht-final-v1.ipynb  htmp-optuna-v8-final-cpu.ipynb  market_prediction_strategy.pptx  phase0_final.py  phase0_final_improved.py  pyproject.toml  solution.ipynb  solution.py  solution_ensemble_simple.py  submission.csv
dev_dumpster/: PHASE1_README.md  ensemble.txt  phase1_implementation.py  solution.py  solution_bronze.py  solution_ensemble.py
docs/: 163th Place Solution: Sharpe ratio 2.16.txt  Implementation_roadmap.md  helpful.md  include_pres.md
