[project]
name = "ML Project"
version = "0.1.0"
description = "Hull Tactical Market Prediction - Multi-Model Ensemble Solution"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
]

[project.optional-dependencies]
all = [
    "xgboost>=1.5.0",
    "lightgbm>=3.2.0",
    "catboost>=0.26.0",
]
